<resources>
    <string name="app_name">QuizMoney</string>
    <string name="APP_NAME">QuizMoney</string>
    <string name="you_are_not_a_member">You are not a member ?</string>
    <string name="register">REGISTER</string>
    <string name="phone_verification">Please enter your country code and phone number for verification</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="_977">+977</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="error_display">Please fill in the form to continue</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="phone_veri_info">We have sent you an OTP for phone verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="working">Working...</string>
    <string name="error_verifying_otp">There was an error verifying the OTP</string>
    <string name="do_you_want_to_resend_code">Do you want to Resend Code ?</string>
    <string name="resend_code">Resend Code</string>
    <string name="timer">Timer</string>
    <string name="welcome_to_money_quiz">Welcome To Money Quiz:</string>
    <string name="nice_to_see_you_here">Nice to see you here :)</string>
    <string name="login">Login</string>
    <string name="signout">SignOut</string>
    <string name="verification_failed">Verification Failed, please try again.</string>
    <string name="logo">Logo</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="firebase_authentication_successful">Firebase Authentication Successful</string>
    <string name="welcome_text">Welcome to game Username!</string>
    <string name="coins">Coins: </string>
    <string name="start_game">Start Game</string>
    <string name="my_profile">My Profile</string>
    <string name="credits_and_details">Credits and Details</string>
    <string name="exit_the_game">Exit The Game</string>
    <string name="score_points">0</string>
    <string name="username">Username</string>
    <string name="profile">profile</string>
    <string name="insertimage">insertImage</string>
    <string name="name_profile">Name:</string>
    <string name="number">Number:</string>
    <string name="share">SHARE</string>
    <string name="payment">Payment</string>
    <string name="imageview">ImageView</string>
    <string name="statistic">Statistic</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="question">Question</string>
    <string name="_7_10">7/10</string>
    <string name="button">Button</string>
    <string name="next">Next</string>
    <string name="loading_data">Loading Data...</string>
    <string name="blackColor">#FF0B0101</string>
    <string name="one">1</string>
    <string name="total_sets_solved">Total sets solved:</string>
    <string name="total_questions_solved">Total questions solved:</string>
    <string name="total_questions_attempt">Total questions attempt:</string>
    <string name="level">Level:</string>
    <string name="rs">Rupees</string>
    <string name="xp">XP</string>
</resources>
