<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/theme"
    android:padding="8dp">

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="200dp"
        android:background="@drawable/menutopwhiteview"/>

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile"
        android:foregroundGravity="center"
        tools:src="@drawable/profile" />

    <ImageView
        android:id="@+id/insertImage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/insertimage"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePic"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/username" />

    <LinearLayout
        android:id="@+id/statLeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stats"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menubtn"
            android:layout_marginStart="25dp"
            android:text="@string/statistic"
            android:fontFamily="@font/bold"
            android:textColor="@color/red"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/leaderBoard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menubtn"
            android:layout_marginStart="25dp"
            android:layout_gravity="center"
            android:fontFamily="@font/bold"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:text="@string/leaderboard"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statLeader"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_profile"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/bold"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/APP_NAME"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:paddingEnd="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_phone_number"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/internalRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/coins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/normal_curve_radius"
                        android:fontFamily="@font/bold"
                        android:text="@string/rs"
                        android:gravity="center"
                        android:drawableStart="@drawable/coin"
                        android:paddingHorizontal="100dp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/coinValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/coins"
                        android:text="@string/score_points"
                        android:textSize="60sp"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:padding="8dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/normal_curve_radius"
            android:drawableStart="@drawable/icon_share_24"
            android:padding="4dp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/paymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_curve_radius"
            android:layout_gravity="center"
            android:drawableStart="@drawable/payment_icon"
            android:layout_marginTop="24dp"
            android:padding="4dp"
            android:text="@string/payment"
            android:textSize="24sp"/>
    </LinearLayout>


</RelativeLayout>