<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="225dp"
        android:background="@drawable/drawable_otp_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="389dp"
        android:layout_height="213dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:paddingTop="22dp"
        app:srcCompat="@drawable/splash_logo"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="67dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/view"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/welcome_to_money_quiz"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="232dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nice_to_see_you_here"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="277dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="156dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="255dp" />


    </LinearLayout>




</RelativeLayout>